# voxel-tree

./: .pdm-python  README.md  pyproject.toml
src/voxel_tree/: __init__.py  drawer.py  octree_node.py  octree_root.py  sampled_boxes.py
tests/: example_tree.py  example_volume_class.py  test_containment.py
